--- a/MoviePicker/Base.lproj/Main.storyboard
+++ b/MoviePicker/Base.lproj/Main.storyboard
@@ -55,10 +55,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7fY-3H-5bL">
-                                <rect key="frame" x="0.0" y="20" width="375" height="41"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0ee-El-F5W">
+                                <rect key="frame" x="0.0" y="20" width="375" height="601.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="igN-2x-NPg" id="bnX-7I-yPw"/>
+                                    <outlet property="delegate" destination="igN-2x-NPg" id="MPx-2G-8df"/>
+                                </connections>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k4N-xu-orc" userLabel="Bottom Bar View">
+                                <rect key="frame" x="0.0" y="621.5" width="375" height="0.5"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="gKj-1p-G7O"/>
+                                    <constraint firstAttribute="height" constant="0.5" id="OZx-cw-rHf"/>
+                                </constraints>
+                            </view>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7fY-3H-5bL">
+                                <rect key="frame" x="0.0" y="622" width="375" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="gKj-1p-G7O"/>
                                 </constraints>
                                 <segments>
                                     <segment title="Cast"/>
@@ -69,34 +84,19 @@
                                     <action selector="onPersonTypeSegmentControlAction:" destination="igN-2x-NPg" eventType="valueChanged" id="Evs-4t-CT5"/>
                                 </connections>
                             </segmentedControl>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k4N-xu-orc" userLabel="Bottom Bar View">
-                                <rect key="frame" x="0.0" y="60" width="375" height="0.5"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="0.5" id="OZx-cw-rHf"/>
-                                </constraints>
-                            </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0ee-El-F5W">
-                                <rect key="frame" x="0.0" y="60.5" width="375" height="606.5"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="igN-2x-NPg" id="bnX-7I-yPw"/>
-                                    <outlet property="delegate" destination="igN-2x-NPg" id="MPx-2G-8df"/>
-                                </connections>
-                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="7fY-3H-5bL" firstAttribute="leading" secondItem="voB-7I-mVv" secondAttribute="leading" id="6Oe-e7-vYv"/>
-                            <constraint firstItem="7fY-3H-5bL" firstAttribute="trailing" secondItem="voB-7I-mVv" secondAttribute="trailing" id="6Ub-lt-0SF"/>
-                            <constraint firstItem="7fY-3H-5bL" firstAttribute="top" secondItem="voB-7I-mVv" secondAttribute="top" id="Hvp-FW-qgB"/>
                             <constraint firstItem="voB-7I-mVv" firstAttribute="trailing" secondItem="k4N-xu-orc" secondAttribute="trailing" id="I77-qW-jJt"/>
+                            <constraint firstItem="k4N-xu-orc" firstAttribute="top" secondItem="0ee-El-F5W" secondAttribute="bottom" id="Jsn-Ri-hMh"/>
+                            <constraint firstItem="7fY-3H-5bL" firstAttribute="bottom" secondItem="voB-7I-mVv" secondAttribute="bottom" id="KUG-Qp-wxP"/>
                             <constraint firstItem="voB-7I-mVv" firstAttribute="trailing" secondItem="0ee-El-F5W" secondAttribute="trailing" id="MWL-Wm-2nH"/>
-                            <constraint firstItem="voB-7I-mVv" firstAttribute="bottom" secondItem="0ee-El-F5W" secondAttribute="bottom" id="Tf5-iI-OPO"/>
+                            <constraint firstItem="7fY-3H-5bL" firstAttribute="top" secondItem="k4N-xu-orc" secondAttribute="bottom" id="QC7-g9-T4W"/>
+                            <constraint firstItem="0ee-El-F5W" firstAttribute="top" secondItem="voB-7I-mVv" secondAttribute="top" id="bDF-62-wW6"/>
+                            <constraint firstItem="7fY-3H-5bL" firstAttribute="trailing" secondItem="voB-7I-mVv" secondAttribute="trailing" id="dqz-Xq-J5b"/>
                             <constraint firstItem="0ee-El-F5W" firstAttribute="leading" secondItem="voB-7I-mVv" secondAttribute="leading" id="lij-MG-8Xr"/>
-                            <constraint firstItem="0ee-El-F5W" firstAttribute="top" secondItem="k4N-xu-orc" secondAttribute="bottom" id="ll2-sa-X47"/>
                             <constraint firstItem="k4N-xu-orc" firstAttribute="leading" secondItem="voB-7I-mVv" secondAttribute="leading" id="oeG-wn-JhV"/>
-                            <constraint firstItem="k4N-xu-orc" firstAttribute="top" secondItem="7fY-3H-5bL" secondAttribute="bottom" id="xyM-Md-QAa"/>
+                            <constraint firstItem="7fY-3H-5bL" firstAttribute="leading" secondItem="voB-7I-mVv" secondAttribute="leading" id="txT-gL-tPj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="voB-7I-mVv"/>
                     </view>
