--- a/MoviePicker/Base.lproj/Main.storyboard
+++ b/MoviePicker/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M0V-NA-q05">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M0V-NA-q05">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -55,25 +55,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0ee-El-F5W">
-                                <rect key="frame" x="0.0" y="20" width="375" height="601.5"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="igN-2x-NPg" id="bnX-7I-yPw"/>
-                                    <outlet property="delegate" destination="igN-2x-NPg" id="MPx-2G-8df"/>
-                                </connections>
-                            </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k4N-xu-orc" userLabel="Bottom Bar View">
-                                <rect key="frame" x="0.0" y="621.5" width="375" height="0.5"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bordered" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7fY-3H-5bL">
+                                <rect key="frame" x="0.0" y="20" width="375" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="0.5" id="OZx-cw-rHf"/>
-                                </constraints>
-                            </view>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7fY-3H-5bL">
-                                <rect key="frame" x="0.0" y="622" width="375" height="46"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="gKj-1p-G7O"/>
+                                    <constraint firstAttribute="height" constant="39" id="gKj-1p-G7O"/>
                                 </constraints>
                                 <segments>
                                     <segment title="Cast"/>
@@ -84,28 +69,43 @@
                                     <action selector="onPersonTypeSegmentControlAction:" destination="igN-2x-NPg" eventType="valueChanged" id="Evs-4t-CT5"/>
                                 </connections>
                             </segmentedControl>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TjU-9m-Sh0" userLabel="Person Type Separator Bar">
-                                <rect key="frame" x="187.5" y="630" width="0.5" height="37"/>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eXe-Ma-rzo" userLabel="Separator Bar View">
+                                <rect key="frame" x="187" y="20" width="1" height="40"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="37" id="FVT-Yf-rkn"/>
-                                    <constraint firstAttribute="width" constant="0.5" id="drH-fd-Vty"/>
+                                    <constraint firstAttribute="width" constant="1" id="Mtu-hN-Q75"/>
+                                    <constraint firstAttribute="height" constant="40" id="TN8-1V-SrT"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k4N-xu-orc" userLabel="Bottom Bar View">
+                                <rect key="frame" x="0.0" y="59" width="375" height="0.5"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="OZx-cw-rHf"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0ee-El-F5W">
+                                <rect key="frame" x="0.0" y="59.5" width="375" height="607.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="igN-2x-NPg" id="bnX-7I-yPw"/>
+                                    <outlet property="delegate" destination="igN-2x-NPg" id="MPx-2G-8df"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="TjU-9m-Sh0" firstAttribute="centerX" secondItem="Nca-Eg-rci" secondAttribute="centerX" id="A2B-eS-WOX"/>
-                            <constraint firstAttribute="bottom" secondItem="TjU-9m-Sh0" secondAttribute="bottom" id="F6i-pY-uey"/>
+                            <constraint firstItem="7fY-3H-5bL" firstAttribute="top" secondItem="voB-7I-mVv" secondAttribute="top" id="2WR-SM-jIX"/>
+                            <constraint firstItem="eXe-Ma-rzo" firstAttribute="top" secondItem="voB-7I-mVv" secondAttribute="top" id="4HK-4p-MJe"/>
+                            <constraint firstItem="eXe-Ma-rzo" firstAttribute="centerX" secondItem="Nca-Eg-rci" secondAttribute="centerX" id="B3N-Xh-sSH"/>
+                            <constraint firstItem="0ee-El-F5W" firstAttribute="top" secondItem="k4N-xu-orc" secondAttribute="bottom" id="CDz-Xu-gzn"/>
                             <constraint firstItem="voB-7I-mVv" firstAttribute="trailing" secondItem="k4N-xu-orc" secondAttribute="trailing" id="I77-qW-jJt"/>
-                            <constraint firstItem="k4N-xu-orc" firstAttribute="top" secondItem="0ee-El-F5W" secondAttribute="bottom" id="Jsn-Ri-hMh"/>
-                            <constraint firstItem="7fY-3H-5bL" firstAttribute="bottom" secondItem="voB-7I-mVv" secondAttribute="bottom" id="KUG-Qp-wxP"/>
                             <constraint firstItem="voB-7I-mVv" firstAttribute="trailing" secondItem="0ee-El-F5W" secondAttribute="trailing" id="MWL-Wm-2nH"/>
-                            <constraint firstItem="7fY-3H-5bL" firstAttribute="top" secondItem="k4N-xu-orc" secondAttribute="bottom" id="QC7-g9-T4W"/>
-                            <constraint firstItem="0ee-El-F5W" firstAttribute="top" secondItem="voB-7I-mVv" secondAttribute="top" id="bDF-62-wW6"/>
+                            <constraint firstItem="voB-7I-mVv" firstAttribute="bottom" secondItem="0ee-El-F5W" secondAttribute="bottom" id="Tas-VL-VmZ"/>
                             <constraint firstItem="7fY-3H-5bL" firstAttribute="trailing" secondItem="voB-7I-mVv" secondAttribute="trailing" id="dqz-Xq-J5b"/>
                             <constraint firstItem="0ee-El-F5W" firstAttribute="leading" secondItem="voB-7I-mVv" secondAttribute="leading" id="lij-MG-8Xr"/>
                             <constraint firstItem="k4N-xu-orc" firstAttribute="leading" secondItem="voB-7I-mVv" secondAttribute="leading" id="oeG-wn-JhV"/>
+                            <constraint firstItem="k4N-xu-orc" firstAttribute="top" secondItem="7fY-3H-5bL" secondAttribute="bottom" id="qxa-Ug-aGV"/>
                             <constraint firstItem="7fY-3H-5bL" firstAttribute="leading" secondItem="voB-7I-mVv" secondAttribute="leading" id="txT-gL-tPj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="voB-7I-mVv"/>
@@ -332,7 +332,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="default_movie_image" width="777" height="899"/>
+        <image name="default_movie_image" width="388.5" height="449.5"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="AWG-3S-84R"/>
