--- a/MoviePicker/Base.lproj/Main.storyboard
+++ b/MoviePicker/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -118,7 +117,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zox-ax-4q4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1989.5999999999999" y="-542.87856071964018"/>
+            <point key="canvasLocation" x="3367" y="-524"/>
         </scene>
         <!--Movie Details View Controller-->
         <scene sceneID="Dld-VK-j1z">
@@ -305,11 +304,47 @@
                     <connections>
                         <outlet property="movieDetailsTableView" destination="hWT-bd-Joq" id="Ibd-bi-ITu"/>
                         <segue destination="igN-2x-NPg" kind="show" identifier="ShowPersonMovies" id="Hkb-x9-9mw"/>
+                        <segue destination="qMz-EX-DC4" kind="show" identifier="ShowPersonList" id="m1u-ZE-hGY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l9A-xx-AUB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1205.5999999999999" y="232.53373313343329"/>
+        </scene>
+        <!--Person List View Controller-->
+        <scene sceneID="5ad-Mm-43Q">
+            <objects>
+                <viewController id="qMz-EX-DC4" customClass="PersonListViewController" customModule="MoviePicker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aPr-WI-Il1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nIN-dc-ZYm">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="qMz-EX-DC4" id="kcT-TH-ttI"/>
+                                    <outlet property="delegate" destination="qMz-EX-DC4" id="Arb-1N-fJL"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hgu-W5-CeU" firstAttribute="trailing" secondItem="nIN-dc-ZYm" secondAttribute="trailing" id="DhH-1d-HIP"/>
+                            <constraint firstItem="nIN-dc-ZYm" firstAttribute="top" secondItem="hgu-W5-CeU" secondAttribute="top" id="G2q-Kp-1FJ"/>
+                            <constraint firstItem="hgu-W5-CeU" firstAttribute="bottom" secondItem="nIN-dc-ZYm" secondAttribute="bottom" id="dnL-pL-Ull"/>
+                            <constraint firstItem="nIN-dc-ZYm" firstAttribute="leading" secondItem="hgu-W5-CeU" secondAttribute="leading" id="pO1-LT-4Ke"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="hgu-W5-CeU"/>
+                    </view>
+                    <connections>
+                        <outlet property="personListTableView" destination="nIN-dc-ZYm" id="nia-qh-Qyf"/>
+                        <segue destination="igN-2x-NPg" kind="show" identifier="ShowPersonMovies" id="2Eb-ae-loT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TZ5-0X-Dzc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2556" y="233"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="nb6-RJ-Uf8">
@@ -335,7 +370,8 @@
         <image name="default_movie_image" width="388.5" height="449.5"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="m1u-ZE-hGY"/>
         <segue reference="AWG-3S-84R"/>
-        <segue reference="Hkb-x9-9mw"/>
+        <segue reference="2Eb-ae-loT"/>
     </inferredMetricsTieBreakers>
 </document>
